Add Shaolinq stress tests

--- a/IdentityServer3.Shaolinq.Tests/app.config
+++ b/IdentityServer3.Shaolinq.Tests/app.config
@@ -3,6 +3,7 @@
 
 	<configSections>
 		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+		<section name="IdentityServerDataAccessModel" type="Shaolinq.DataAccessModelConfigurationSectionHandler, Shaolinq" />
 	</configSections>
 
 	<log4net>
@@ -16,7 +17,18 @@
 			<level value="DEBUG" />
 			<appender-ref ref="ConsoleAppender" />
 		</root>
+
+		<logger name="Shaolinq">
+			<level value="ERROR" />
+		</logger>
 	</log4net>
+
+	<IdentityServerDataAccessModel>
+		<SqlDatabaseContexts>
+			<Postgres DatabaseName="kastrauth" ServerName="db.dev.ldn.kastr.tv" Port="6432" UserId="postgres" Password="postgres" Pooling="true" MaxPoolSize="2" />
+			<!--<Postgres DatabaseName="kastrauth" ServerName="localhost" Port="5432" UserId="postgres" Password="postgres" Pooling="true" MaxPoolSize="2" />-->
+		</SqlDatabaseContexts>
+	</IdentityServerDataAccessModel>
 
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
