--- a/IdentityServer3.Shaolinq.Tests/packages.config
+++ b/IdentityServer3.Shaolinq.Tests/packages.config
@@ -1,10 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="IdentityServer3" version="2.0.1" targetFramework="net452" />
   <package id="log4net" version="2.0.5" targetFramework="net452" />
+  <package id="Npgsql" version="3.1.6" targetFramework="net452" />
   <package id="NUnit" version="2.6.4" targetFramework="net452" />
-  <package id="Platform.NET" version="1.2.1.276" targetFramework="net452" />
-  <package id="Platform.Xml.Serialization" version="1.2.1.276" targetFramework="net452" />
-  <package id="Shaolinq" version="1.0.1.764-rc" targetFramework="net452" />
+  <package id="Owin" version="1.0" targetFramework="net452" />
+  <package id="Platform.NET" version="1.2.1.283" targetFramework="net452" />
+  <package id="Platform.Xml.Serialization" version="1.2.1.283" targetFramework="net452" />
+  <package id="Shaolinq" version="1.1.0.936" targetFramework="net452" />
+  <package id="Shaolinq.Postgres" version="1.1.0.936" targetFramework="net452" />
   <package id="Shaolinq.Sqlite" version="1.0.1.764-rc" targetFramework="net452" />
   <package id="System.Data.SQLite.Core" version="1.0.99.0" targetFramework="net452" />
 </packages>
